<resources>
    <string name="app_name">rBOOK - Short stories online</string>
    <string name="rbook">rBOOK</string>
    <string name="new_item_txt">NEW</string>
    <string name="title_light_novel_list">SHORT STORIES</string>
    <string name="sub_title_light_novel_list">Short stories or for heart and soul.</string>
    <string name="title_comic_list">STORIES FOR KIDS</string>
    <string name="sub_title_comic_list">Short stories for kid.</string>
    <string name="hot_item_title_defaul">Harypoter va hon da phu thuy</string>
    <string name="title_hot_list">BEST 5</string>
    <string name="title_item_light_novel_defaul">Slowd art online 2</string>
    <string name="author_item_light_novel_default">AnChung Agahi</string>
    <string name="title_new_list">TOP NEW</string>
    <string name="title_other_list">OTHER</string>
    <string name="sub_title_other_list">Other type</string>
    <string name="nav_header_text_default">rBook</string>
    <string name="favorie_menuleft_btn_title_other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorie_menuleft_btn_title">Light Novel</string>
    <string name="favorie_menuleft_btn_title_lightnovel">Light Novel</string>
    <string name="favorie_menuleft_btn_title_comic">Comic</string>
    <string name="default_content">Empty</string>
    <string name="info_book_btn_read_title">Read</string>
    <string name="tv_or_title">Or</string>
    <string name="info_book_btn_download_title">Download</string>
    <string name="tv_info_more_book_title">More</string>
    <string name="tvi_title_book_of_readbook_default">Sowld Art Online 3</string>
    <string name="tv_title_favorite_recyler_view_content_default">Ben kia dam may noi ta hen uoc</string>
    <string name="date_of_add_favorite">22/11/2012</string>
    <string name="tv_book_on_sdcard_title_content_default">Swold art online 3</string>
    <string name="tv_font_style_title">Font Style</string>
    <string name="tv_font_style_a">A</string>
    <string name="tvTitleSettingActiviry"><![CDATA[Language & Other]]></string>
    <string name="id">Id</string>
    <string name="category">Category</string>
    <string name="author">Author</string>
    <string name="linkbook">LinkBook</string>
    <string name="linkimage">LinkImage</string>
    <string name="title">Title</string>
    <string name="views">Views</string>
    <string name="other">Other</string>
    <string name="lightnovel">LightNovel</string>
    <string name="comic">Comic</string>
    <string name="dialog_delete_title">Do you want delete this book ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="status_service">status_service</string>
    <string name="notification_title">rBOOK notification</string>
    <string name="notification_content_text">Update new book ....</string>
    <string name="setting">SETTING</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_notification_sub">Update book real time</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="facebook_connect">Facebook Connect</string>
    <string name="status_connect_facebook">No connect</string>
    <string name="choose_your_language">Choose your language !!!</string>
    <string name="menu_home">Home</string>
    <string name="favorite_menu">Favorite Book</string>
    <string name="book_on_phone">Book on phone</string>
    <string name="setting_menu">Setting</string>
    <string name="rate_my_app_menu">Rate my app</string>
    <string name="about_menu">About</string>
    <string name="book_on_phone_title">BOOK ON PHONE</string>
    <string name="favorite_title">FAVORITE</string>
    <string name="tv_font_size">Font size</string>
    <string name="minus">-</string>
    <string name="tv_margin_text">Margin</string>
    <string name="plus">+</string>
    <string name="light_mode">Light Mode</string>
    <string name="tv_night_mode">Night</string>
    <string name="random_item">Random</string>
    <string name="empty">Empty</string>
    <string name="description_introdcuce_app">Mobile short stories</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="banner_ads">ca-app-pub-6735901313419368/7025165131</string>
    <string name="interstitial_full_screen">ca-app-pub-6735901313419368/8501898331</string>
    <string name="network_dialog_title">Your device is not connected to the network.</string>
    <string name="network_dialog_content">
You want to continue to open the application.
We will open stories have been downloaded.</string>
    <string name="about_title">About app</string>
    <string name="about_content">Hello. I am "D". I am Android developer. I love read book.So i create this app for me and all people like read book.
    I will update 20 stories per day. Hope you like that. Thank you very much.</string>
</resources>