<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite_menu" />
        <item
            android:id="@+id/nav_book_in_sd_card"
            android:icon="@drawable/ic_sd_storage"
            android:title="@string/book_on_phone" />
        <item android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting_menu"/>
    </group>
    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_me"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about_menu" />
            </group>
        </menu>
    </item>
</menu>