<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgFavoriteRecylerView"
            android:contentDescription="@null"
            android:src="@drawable/favorite1"
            android:scaleType="centerCrop"
            android:layout_width="@dimen/img_favorite_title_recylerview_width"
            android:layout_height="@dimen/img_favorite_title_recylerview_width" />
        <TextView
            android:id="@+id/tvTitleFavoriteRecylerView"
            android:textSize="@dimen/tv_title_favorite_recyler_view_text_size"
            android:fontFamily="monospace"
            android:textColor="@color/colorBlack"
            android:text="@string/tv_title_favorite_recyler_view_content_default"
            android:layout_toEndOf="@id/imgFavoriteRecylerView"
            android:layout_toRightOf="@id/imgFavoriteRecylerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toRightOf="@id/imgFavoriteRecylerView"
            android:layout_toEndOf="@id/imgFavoriteRecylerView"
            android:layout_alignParentBottom="true"
            android:text="@string/author_item_light_novel_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/date_of_add_favorite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
